# Legal-Pleadings

./: .gitignore  Annual Update Form For COI Management Plan.docx  DOCKER_README.md  Legal_Pleadings_SDD.docx  Legal_Pleadings_SDD.md  PM2_DEPLOYMENT.md  TECHNICAL_ARCHITECTURE.md  analysis_result_2026.1.28 MCAD Docket No. 25BEM03257 - Andrea Roxton v. Boston Children's Hospital and Genevieve Benoit - Respondents' Position Statement(323204707.1).pdf.json  analysis_result_Docket No. 23-BEM-02712 - Respondent's Position Statement - Benjamin v. BCH - Elizabeth Davey.pdf.json  architecture.md  clear_db_tables.py  create_template.py  debug_start.py  debug_upload.py  docker-compose.yml  ecosystem.config.js  execute_drafting.py  generate_diagrams.py  generate_sdd_docx.py  init_db.bat  process_pleading.py  read_docx.py  reset_db.py  run_backend.bat  run_david_final_test.py  run_hidden.vbs  run_project.bat  setup_env.bat  setup_simple.ps1  start.bat  stop_backend.bat  test_david_draft.py  test_deia_fix.py  test_output.txt  tmp_gpt5_fast.py  tmp_test_gpt5.py  verify_db.py  verify_drafting_upgrade.py  verify_extraction_final.py  verify_vm.py
backend/: .dockerignore  Dockerfile  (+11 more)
march_version/Legal-Pleadings-42748f791437eb2f635cae9c6b50959024e96a6d/: .gitignore  david_input.json  pyproject.toml  repro_422.py  repro_andrea.py  run_alyssa_test.py  run_david_final_clean.py  setup_pm2.ps1  test_andrea_final.py
march_version/Legal-Pleadings-42748f791437eb2f635cae9c6b50959024e96a6d/backend/: main.py
march_version/Legal-Pleadings-42748f791437eb2f635cae9c6b50959024e96a6d/data/: .gitkeep
(+31 files in other folders)
